fixed favorite button alignment

--- a/react-app/src/components/Restaurants/OneRestaurant.css
+++ b/react-app/src/components/Restaurants/OneRestaurant.css
@@ -45,7 +45,7 @@
 
 .favorite-details-button-container {
     display: flex;
-    align-items: end;
+    align-items: center;
 }
 
 h5 {
